# pytorch

./: README.md  setup.py
cmake/: TorchConfig.cmake.in
generated_bindings/: custom_torch_bindings.cpp  custom_torch_bindings.h
tools/c_bindings/: generator.py  sample_config.yaml
torch/: CMakeLists.txt
torch/csrc/api/c/: CMakeLists.txt
torch/csrc/api/c/include/torch/c/: torch.h
torch/csrc/api/c/src/: torch.cpp
torch/csrc/api/c/test/: test_basic.c
